# bmcapture

./: .gitignore  README.md  bmcapture.cpp  bmcapture.h  pyproject.toml  setup.py
bmcapture/: __init__.py  __main__.py  utils.py
examples/: list_inputs.py  multi_channel_capture.py  multi_channel_preview.py  preview.py  simple_capture.py  simple_capture_cv2.py
python/: bmcapture_python.cpp
src/: bmcapture_python.cpp
