[project]
dynamic = ["version"]
name = "bmcapture"
description='Python wrapper for BlackMagic capture devices'
authors=[{name = "Joshua D. Boyd", email = "jdboyd@jdboyd.net"}]
dependencies = ['numpy']
license = "MIT"



[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["frame_dump/*"]
