[project]
dynamic = ["version"]
name = "bmcapture"
description = 'Python wrapper for BlackMagic capture devices'
authors = [{name = "Joshua D. Boyd", email = "jdboyd@jdboyd.net"}]
dependencies = ['numpy']
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
exclude = ["frame_dump/*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]


[project.scripts]
my-script = "bmcapture.__main__:main"
